# cpp-unit-test-generator-llm

./: .gitignore  CMakeLists.txt  README.md  main.cpp  report.md
model/: call_ollama.py  refine_test.py
scripts/: build_and_test.sh
tests/: test_main.cpp  test_main_refined.cpp
yaml/: prompt_strict.yaml  refine_prompt.yaml
